--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stream TV and Movies Live and Online | Hulu</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico.png" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -23,7 +24,6 @@
             </div>
             <div class="mastheadFooter">
                 <div class = "logoDiv">
-
                     <img src="https://www.hulu.com/static/hitch/s3/2020-05/DPlus_Logo_0_1_2.png?Rj7zClAjpZ72iHJxfWDi4fkv3FcnDaB5" class="bundleLogo">
                 </div>
                 <div class="offerDiv">
