--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1><img src="https://www.hulu.com/static/hitch/s3/2020-08/Hulu_Logo-01_newgreen.png" class="huluLogo"></h1>
                 <h2>Watch thousands of shows and movies, with plans starting at $5.99/month.</h2>
                 <h3>HBO Max™, SHOWTIME®, CINEMAX® and STARZ® available as add-ons.</h3>
-                <button class="freeTrial">Start Your Free Trial</button>
+                <a href=https://signup.hulu.com/plans target="_blank"><button class="freeTrial">Start Your Free Trial</button></a>
                 <h5>Free trial for new & eligible returning subscribers only.</h5>
             </div>
             <div class="mastheadFooter">
@@ -32,7 +32,7 @@
                     <a href="#">More Details</a>
                 </div>
                 <div class="offerButtonDiv">
-                    <button class="offerButton">Get Bundle</button>
+                    <a href="https://signup.hulu.com/account" target="_blank"><button class="offerButton">Get Bundle</button></a>
                     <br/>
                     <a href="https://www.hulu.com/terms/disney-bundle" target="_blank">Terms Apply</a>
                 </div>
@@ -56,17 +56,17 @@
                         <span>Most Popular</span>
                         <h2>Hulu</h2>
                         <h4>30 Day Free Trial</h4>
-                        <button>Try for $0</button>
+                        <a href="https://signup.hulu.com/plan-options" target="_blank"><button>Try for $0</button></a>
                     </div>
                     <div class="plan2">
                         <h2>Hulu (No Ads)</h2>
                         <h4>30 Day Free Trial</h4>
-                        <button>Try for $0</button>
+                        <a href="https://signup.hulu.com/account" target="_blank"><button>Try for $0</button></a>
                     </div>
                     <div class="plan3">
                         <h2>Hulu + Live TV</h2>
                         <h4>30 Day Free Trial</h4>
-                        <button>Try for $0</button>
+                        <a href="https://signup.hulu.com/account" target="_blank"><button>Try for $0</button></a>
                     </div>
                 </div>
             </div>
